--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,7 +45,7 @@ ul {
   padding-top: 0px;
   background-color: rgb(0, 0, 0);
   z-index: 90;
-  height: 15vh;
+  height: 12vh;
 }
 
 .nav_bar {
@@ -121,7 +121,7 @@ ul {
 .enlaces li {
   display: inline-block;
   height: 40%;
-  margin: 4% 5px;
+  margin: 2.6% 5px;
   border-radius: 20px 20px 20px 20px;
   background-color: black;
   padding: 5px 7px 4%;
@@ -182,7 +182,6 @@ ul {
   margin-top: 5vh;
 }
 
-
 /* Sección de bienvenida */
 .welcome {
   position: relative;
@@ -193,7 +192,6 @@ ul {
   background-image: url(../assets/images/general/maquina_tatuar.png);
   background-size: 100% 100%;
   background-repeat: no-repeat;
-
 }
 
 .texto_welcome {
@@ -251,7 +249,7 @@ ul {
 .texto_section {
   margin: auto 0px;
   text-align: center;
-  padding: 10% 0px;
+  padding: 5% 0px 15%;
 }
 
 .parrafo_section {
@@ -271,8 +269,8 @@ ul {
 }
 
 .img_apartado {
-  height: 90%;
-  width: 100%;
+  height: 450px;
+  width: 500px;
   border-radius: 20%;
   box-shadow: 0px 25px 10px;
 }
@@ -319,7 +317,7 @@ ul {
   color: rgba(255, 255, 255, 0.897);
   background-color: rgba(204, 204, 204, 0.671);
   font-weight: 600;
-  bottom: 2rem;
+  bottom: 4rem;
 }
 
 .carousel-caption p {
@@ -349,7 +347,7 @@ ul {
 }
 .carousel-indicators {
   z-index: 50;
-  margin-bottom: 2.7rem;
+  margin-bottom: 4rem;
 }
 
 .carousel-cards {
@@ -380,41 +378,17 @@ ul {
 
 .video_carousel1 {
   width: 100%;
+  height: 100%;
 }
 
 .video_carousel2 {
   display: none;
   margin: 0 auto;
+  height: 100%;
 }
 
 .titulo-articulos {
   margin: 0px 0px 2vh;
-}
-
-.aside {
-  padding-top: 10vh;
-  text-align: center;
-  padding-bottom: 5vh;
-}
-
-.aside h3 {
-  padding-top: 3vh;
-  padding-bottom: 3vh;
-}
-
-label {
-  font-size: 3vh;
-}
-
-.boton-enviar {
-  font-size: 3vh;
-}
-
-.information {
-  text-align: left;
-  width: 70%;
-  margin: 0px auto;
-  font-weight: bold;
 }
 
 .footer {
@@ -671,17 +645,46 @@ th {
 
 /* Contáctenos */
 
-.seccion_formulario{
+.seccion_formulario {
   margin: 40px 0;
-
 }
 
-.seccion_formulario__title{
+.seccion_formulario__title {
   text-align: center;
   font-weight: bold;
 }
 
-.seccion_mapa{
+.seccion_mapa {
   text-align: center;
   margin: 30px 0;
+}
+
+.mb-3{
+  width: 800px;
+  margin: 0 auto;
+}
+
+.information {
+  text-align: left;
+  width: 70%;
+  margin: 30px auto;
+  font-weight: bold;
+}
+
+.formulario__label {
+  display: block;
+  font-size: 18px;
+  margin-right: auto;
+  text-align: left;
+}
+
+.boton-enviar {
+  font-size: 20px;
+  margin: 10px auto;
+  width: 150px;
+}
+
+.seccion_mapa{
+  width: 600px;
+  margin: 10px auto;
 }
