--- a/CSS/style.css
+++ b/CSS/style.css
@@ -249,12 +249,13 @@ ul {
 .texto_section {
   margin: auto 0px;
   text-align: center;
-  padding: 5% 0px 15%;
+  padding: 5% 0px 10%;
 }
 
 .parrafo_section {
   padding: 30px 10% 0px;
-  font-size: 3vh;
+  font-size: 2.5vh;
+  font-weight: 600;
 }
 
 .texto_section ul li {
@@ -262,7 +263,6 @@ ul {
 }
 
 .img_section {
-  height: inherit;
   margin-left: auto;
   margin-right: auto;
   height: 70vh;
@@ -550,6 +550,16 @@ ul {
   background-color: white;
 }
 
+.table_section {
+  margin-left: auto;
+  margin-right: auto;
+  height: 70vh;
+}
+
+.section_horario {
+  display: none;
+}
+
 td,
 th {
   border: 3px solid black;
@@ -659,7 +669,7 @@ th {
   margin: 30px 0;
 }
 
-.mb-3{
+.mb-3 {
   width: 800px;
   margin: 0 auto;
 }
@@ -684,7 +694,7 @@ th {
   width: 150px;
 }
 
-.seccion_mapa{
+.seccion_mapa {
   width: 600px;
   margin: 10px auto;
 }
