--- a/CSS/media.css
+++ b/CSS/media.css
@@ -153,9 +153,9 @@
 
 @media screen and (max-width: 550px) {
   .welcome {
-    height: 55vh;
-    background-image: url(assets/images/general/maquina_tatuar.png);
-    background-size: 100% 100%;
+    padding-bottom: 50px;
+    background-size: 100% 90%;
+
   }
 
   .title_section{
