fase-3-Formulario-con-validacion

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -121,7 +121,7 @@ ul {
 .enlaces li {
   display: inline-block;
   height: 40%;
-  margin: 2.6% 5px;
+  margin: 1.8% 5px;
   border-radius: 20px 20px 20px 20px;
   background-color: black;
   padding: 5px 7px 4%;
@@ -695,19 +695,73 @@ th {
   text-align: left;
 }
 
-.boton-enviar {
-  display: block;
-  font-size: 20px;
-  margin: 10px auto;
-  width: 150px;
-}
-
 .seccion_mapa {
   width: 600px;
   margin: 10px auto;
 }
 
-.texto-error{
+
+
+/* ...................................... */
+
+.formulario__label {
+  display: block;
+  font-weight: 700;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.formulario__grupo{
+    width: 800px;
+    margin: 0 auto;
+}
+
+.formulario__grupo-input {
+  position: relative;
+}
+
+.formulario__input {
+  width: 100%;
+  background-color: white;
+  border: 3px solid transparent;
+  border-radius: 10px;
+  height: 45px;
+  line-height: 45px;
+  pad: 0 40px 0 10px;
+  transition: 0.3s ease all;
+}
+
+.formulario__input:focus {
+  border: 3px solid #0075ff;
+  outline: none;
+  box-shadow: 3px 0px 30px rgba(163, 163, 163, 0.4);
+}
+
+.formulario__input-error {
+  font-size: 12px;
+  margin-bottom: 0;
+  display: none;
+}
+
+.formulario__input-error-activo {
+  display: block;
+}
+
+.formulario__validacion-estado {
+  position: absolute;
+  right: 10px;
+  bottom: 15px;
+  z-index: 100;
+  font-size: 16px;
+  opacity: 0;
+}
+
+.formulario__checkbox {
+  margin-right: 10px;
+}
+
+.formulario__mensaje {
+  height: 45px;
   line-height: 45px;
   background-color: #f66060;
   padding: 0 15px;
@@ -715,11 +769,46 @@ th {
   display: none;
 }
 
-.texto-correcto{
-  font-size: 14px;
-  background-color: #119200;
-  text-align: center;
-  width: 300px;
+.formulario__mensaje-activo {
+  display: block;
+}
+
+.formulario__mensaje p {
+  margin: 0;
+}
+
+.boton-enviar {
+  display: block;
+  font-size: 20px;
   margin: 10px auto;
-  display: none;
+  width: 150px;
+}
+
+.formulario__mensaje-exito-activo {
+  display: block;
+}
+
+.formulario_textarea{
+  height: 150px;
+  resize: none;
+}
+
+/* Estilos para Validación */
+
+.formulario__grupo-correcto .formulario__validacion-estado {
+  color: #1ed1d2;
+  opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__label {
+  color: #bb2929;
+}
+
+.formulario__grupo-incorrecto .formulario__validacion-estado {
+  color: #bb2929;
+  opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__input {
+  border: 3px solid #bb2929;
 }
