--- a/CSS/media.css
+++ b/CSS/media.css
@@ -35,8 +35,8 @@
     font-size: 15px;
   }
 
-  .offcanvas-body ul li a {
-    font-size: 20px;
+  .nav-link {
+    font-size: 15px;
   }
 
   .img_section {
@@ -176,7 +176,7 @@
     font-size: 25px;
   }
 
-  .parrafo_section {
+  .parrafo_section,.texto_section ul li {
     font-size: 17px;
   }
 
