--- a/CSS/style.css
+++ b/CSS/style.css
@@ -375,6 +375,15 @@ ul {
   text-align: right;
 }
 
+.carousel_img-izq{
+  border-radius: 20px 0 0 20px;
+}
+
+.carousel_img-der{
+  border-radius: 0 20px 20px 0;
+}
+
+
 .video_carousel1 {
   width: 100%;
   height: 100%;
