Eduardo_Tatto_Shop_V1_20/04/23

--- a/CSS/media.css
+++ b/CSS/media.css
@@ -251,6 +251,10 @@
   .estilos {
     margin-top: 50px;
   }
+
+  .servicios-horario .table_section{
+    margin-bottom: 30%;
+  }
 }
 
 @media (max-width: 800px) {
